--- a/http/build.gradle
+++ b/http/build.gradle
@@ -30,12 +30,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
 
     /*RxLifecycle基础库*/
-    implementation 'com.trello.rxlifecycle3:rxlifecycle:3.0.0'
-    implementation 'com.trello.rxlifecycle3:rxlifecycle-components:3.0.0'
+    api 'com.trello.rxlifecycle3:rxlifecycle:3.0.0'
+    api 'com.trello.rxlifecycle3:rxlifecycle-components:3.0.0'
 
     /*网络请求框架*/
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    api 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
