--- a/http/build.gradle
+++ b/http/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 29
@@ -22,6 +23,9 @@ android {
         }
     }
 
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -42,4 +46,14 @@ dependencies {
     /*RxJava&RxAndroid*/
     implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+}
+
+publish {
+    userOrg = 'wsl4833062'
+    repoName = 'SunLibrary'
+    groupId = 'com.sun.library'
+    artifactId = 'http'
+    publishVersion = '1.0.0'
+    desc = 'this is a android base lib'
+    website = 'https://github.com/MMMMMLiang/SunLib'
 }
